layout fixed of itinerary page. title text overflow is hidden and height is given to title,price

--- a/app/src/frontend/sass/_6-itinerary-list.scss
+++ b/app/src/frontend/sass/_6-itinerary-list.scss
@@ -1884,3 +1884,32 @@
 		
 	}
 }
+
+
+	.view-box {
+		.left-content {
+			header {
+				// width: 324px;
+				height: 100px;
+				overflow: hidden;
+			}
+		}
+		.right-content {
+			.footer-wrapper {
+				width: 324px;
+				// height: 90px;
+				height: 106px;
+			}
+		}
+	}
+
+.view-box{
+	.left-content{
+		.trip-icons{
+			width:314px;
+			height: 144px;
+		}
+	}
+}
+
+
